--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,8 +15,10 @@
     <dimen name="font_huge">34sp</dimen>
     <dimen name="font_larger">24sp</dimen>
     <dimen name="font_large">18sp</dimen>
-    <dimen name="font_normal">16sp</dimen>
+    <dimen name="font_medium">16sp</dimen>
+    <dimen name="font_normal">14sp</dimen>
     <dimen name="font_small">12sp</dimen>
+    <dimen name="font_tiny">11sp</dimen>
 
     <dimen name="font_button">14sp</dimen>
     <dimen name="font_title">20sp</dimen>
