--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -26,4 +26,19 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
+    <TextView
+        android:id="@+id/empty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/roboto_bold"
+        android:text="Noch keine Favoriten"
+        android:textAlignment="center"
+        android:textColor="@color/primary"
+        android:textSize="@dimen/font_large"
+        android:drawablePadding="@dimen/spacing_tiny"
+        app:drawableTopCompat="@drawable/img_undraw_empty"
+        android:layout_gravity="center"
+        android:visibility="gone"
+        tools:visibility="visible"/>
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
